# pv-root-cause

./: .gitignore  Cargo.toml  README.md  build.rs  cdk.json  content_build.rs  mise.toml  plan.md  spec.md
.github/workflows/: pages.yml
content/grid/: grid-curtailment-losses.md
content/inverters/: inverter-voltage-floor-losses.md
content/modeling/: flawed-pan-file-losses.md
content/modules/: bypass-diode-failure.md  cell-cracks.md  cell-interconnection-failure.md  example.md  flawed-pan-file-losses.md  glass-breakage.md  junction-box-failure.md  light-induced-degradation.md  module-hotspot.md  potential-induced-degradation.md  severe-metallization-corrosion.md  spectral-effect-losses.md  system-vs-module-degradation.md
content/soiling/: fungal-soiling-losses.md  granular-dust-soiling-losses.md  snow-accumulation-losses.md  soiling-losses.md
content/trackers/: terrain-undulation-yield-losses.md  tracker-twist.md  tracker-wind-stow-losses.md
content/wiring/: cable-defect.md  connector-defect.md
infra/: README.md  app.py  cdk.json  pyproject.toml
public/: CNAME  cause_content.json  search_index.json  styles.css
scripts/: cdk-app.sh  deploy.sh
src/: lib.rs  main.rs  models.rs  search.rs
src/components/: cause_card.rs  filter_panel.rs  footer.rs  header.rs  image_gallery.rs  mod.rs  search_bar.rs  tag_pill.rs
src/pages/: about.rs  contributors.rs  detail.rs  home.rs  mod.rs  submit.rs  tags.rs
tests/: content_validation.rs
