[package]
name = "pv-root-cause"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
leptos = "0.8.19"
leptos_axum = { version = "0.8", optional = true }
leptos_meta = "0.8"
leptos_router = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[build-dependencies]
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[features]
hydrate = [
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "leptos/hydrate",
]
ssr = [
    "dep:axum",
    "dep:leptos_axum",
    "dep:tokio",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "pv-root-cause"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
